labs/5-ingress/monolith-ingress.yaml
kind: Ingress
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
metadata:
  name: "monolith"
spec:
  #tls:
  #- hosts:
  #    - monolith.com
  #  secretName: tls-certs
  rules:
  - host: monolith.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: monolith
            port: 
              number: 80
